@@ -8,4 +8,4 @@ versionMin=42.0
 url=https://github.com/amescodes/PZPI2AB
 authors=amescodes
 incompatible=\PI2AB
-modversion=42.1.0.1
+modversion=42.1.0.2
